# devservices

./: .craft.yml  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HACKING.md  Makefile  README.md  TODO.md  codecov.yml  pyoxidizer.bzl  pyproject.toml  requirements-dev-frozen.txt  requirements-dev.txt  requirements-frozen.txt  requirements.txt  setup.cfg  setup.py
.cursor/: rules
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  test.yml
devenv/: config.ini  sync.py
devservices/: __init__.py  config.yml  constants.py  exceptions.py  main.py
devservices/commands/: check_for_update.py  down.py  foreground.py  list_dependencies.py  list_services.py  logs.py  purge.py  reset.py  sandbox.py  serve.py  start.py  status.py  stop.py  toggle.py  up.py  update.py
devservices/configs/: service_config.py
devservices/utils/: check_for_update.py  console.py  dependencies.py  devenv.py  docker.py  docker_compose.py  file_lock.py  git.py  install_binary.py  retry.py  sandbox.py  services.py  state.py  supervisor.py
lib/make/: venv
scripts/: bump-version.sh
src/: __init__.py  cli.py  exceptions.py  main.py  services.py
src/commands/: __init__.py  list_dependencies.py  list_services.py  logs.py  remove.py  start.py  status.py  stop.py
src/configs/: service_config.py  types.py
src/devservices/: cli.py
src/devservices/commands/: __init__.py  start.py  stop.py
src/devservices/utils/: __init__.py
src/utils/: __init__.py  config.py  console.py  devenv.py  docker_compose.py  services.py  terminal.py  types.py
testing/: utils.py
testing/resources/basic_repo/: README.md
testing/resources/basic_repo/devservices/: config.yml
testing/resources/blank_repo/: README.md
testing/resources/child-service-repo/: README.md
testing/resources/child-service-repo/devservices/: config.yml
testing/resources/grandparent-service-repo/: README.md
testing/resources/grandparent-service-repo/devservices/: config.yml
testing/resources/invalid_repo/: README.md
testing/resources/invalid_repo/devservices/: config.yml
testing/resources/non-devservices-repo/: README.md
testing/resources/parent-service-repo/: README.md
testing/resources/parent-service-repo/devservices/: config.yml
tests/: conftest.py  testutils.py  utils.py
tests/commands/: test_down.py  test_foreground.py  test_list_dependencies.py  test_list_services.py  test_logs.py  test_purge.py  test_reset.py  test_sandbox.py  test_serve.py  test_start.py  test_status.py  test_stop.py  test_toggle.py  test_up.py  test_update.py
tests/configs/: test_service_config.py
tests/utils/: test_check_for_update.py  test_console.py  test_dependencies.py  test_docker.py  test_docker_compose.py  test_download_and_install_binary.py  test_git.py  test_install_binary.py  test_sandbox.py  test_services.py  test_state.py  test_supervisor.py
