[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devservices"
version = "1.1.3"
# 3.11 is just for internal pypi compat
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "sentry-devenv",
    "sentry-sdk",
    "packaging",
    "supervisor",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "types-PyYAML",
]

[project.scripts]
devservices = "devservices.main:main"

[tool.setuptools.packages]
find = {}


[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
