[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devservices"
version = "1.3.0"
# 3.11 is just for internal pypi compat
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "sentry-devenv",
    "sentry-sdk",
    "packaging",
    "supervisor",
]

[dependency-groups]
dev = [
    "build",
    "freezegun",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "setuptools>=70",
    "shellcheck-py",
    "wheel",
    "types-PyYAML",
]

[project.scripts]
devservices = "devservices.main:main"

[tool.setuptools.packages]
find = {}

[[tool.uv.index]]
url = "https://pypi.devinfra.sentry.io/simple"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]
